[project]
name = "pdp12-asm"
version = "0.0.0"
description = "PDP-12 Cross Assembler"
authors = [
    { name = "Julian Nowaczek", email = "jnowaczek@users.noreply.github.com" },
]
dependencies = [
    "ply<4.0,>=3.11",
]
requires-python = ">=3.7,<4.0"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }

[tool.pdm]
[tool.pdm.dev-dependencies]
test = []

[tool.pdm.build]
includes = ["src/pdp12_asm", "src/output_format"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
pdp12-asm = "pdp12_asm.pdp12_asm:main"
